# consul-announcer

./: .gitignore  CHANGELOG.md  CHANGELOG.rst  README.md  README.rst  setup.cfg  tox.ini
requirements/: base.txt  test.txt
src/announcer/: __init__.py  client.py  exceptions.py  service.py  utils.py
src/doorkeeper/: __init__.py  client.py  demo.py  exceptions.py  service.py
tests/: conftest.py  test_doorkeeper.py
tests/config/: correct-no-ttl.json  correct.json  no-services.json  service-id-duplicate.json  service-without-name.json  wrong-checks-key.json  wrong.json
tests/integration_tests/: test_service.py  test_service_interaction.py
tests/smoke_tests/: test_service_alive.py
tests/unit_tests/: test_client.py  test_service.py  test_utils.py
