[metadata]
name = consul-announcer
author = NCBI
author-email = python-core@ncbi.nlm.nih.gov
license = NCBI license
home-page = https://github.com/ncbi/consul-announcer
classifiers =
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Development Status :: 5 - Production/Stable

[files]
packages_root = src
scripts = bin/consul-announcer

[bdist_wheel]
universal = true
